2004/02/25 15:21 (-0500) rwmcfa1

	* GObject.xs: use new positioning pod mech. use #if 0 trick to get 
	tie_properties to act like a real method

	* MakeHelper.pm: extra =back removed

	* GBoxed.xs, GError.xs, GMainLoop.xs, GParamSpec.xs, GType.xs: use new 
	positioning pod mech.

	* GenPod.pm, ParseXSDoc.pm: new positioning pod mech put in place

2004/02/23 17:05 (-0500) muppetman

	* GError.xs: allow '' as well as undef when an SV into a GError,
	as $@ is usually '' to say 'no error'.

2004/02/23 15:16 (-0500) rwmcfa1

	* t/1.t: versions could be 0, which would fail before, check for
	defined.

2004/02/23 14:38 (-0500) muppetman

	* ParseXSDoc.pm: add hidden pods to the list of things to ignore when
	checking if a package is empty; this keeps from clobbering the pod in
	Glib.pm with Glib.pod, among other things.

2004/02/23 01:37 (-0500) muppetman

	* GClosure.xs: don't clobber $_

	* GenPod.pm: if an xsub is marked as a function, generate a
	function's signature for it.

	* GUtils.xs: mark the functions as functions.

	* GSignal.xs: =arg -> =for arg

	* GError.xs, gperl.h: add the ability to register new error domains
	and throw Glib::Errors from Perl.  New utility function,
	Glib::Error::matches, makes it easy to test errors.  New xs utility
	function for parsing a perl data structure into a GError.

	* t/d.t: bunches of new tests for the new Glib::Error features.

2004/02/22 21:44 (-0500) rwmcfa1

	* GSignal.xs: =arg -> =for arg, apidoc error/type-o fixed.

	* GUtils.xs, t/1.t: implemented CHECK_VERSION and friends with the same
	scheme that went into Gtk2 eariler today.

	* ParseXSDoc.pm: changed hide_hidden -> preprocess_pod. it now looks for
	the __function__ keyword. changed the way these keywords are recorded,
	they now go into xsub keys.
	
	* GenPod.pm: use the above by looking for the function key in xsubs
	and proceeding accordingly.

2004/02/22 15:26 (-0500) rwmcfa1

	* GenPod.pm: removed warning about xsubs with no args, as they're 