@@ -1,3 +1,9 @@
+2004/02/25 19:28 (-0500) rwmcfa1
+
+	* ParseXSDoc.pm, GenPod.pm, GBoxed.xs, GError.xs, GMainLoop.xs,
+	GParamSpec.xs, GType.xs: =pod position=<pos> -> =for position <pos> 
+	some pod parsers don't like text after =pod.
+
 2004/02/25 15:21 (-0500) rwmcfa1
 
 	* GObject.xs: use new positioning pod mech. use #if 0 trick to get 
